# SwiftCNV

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/notebooks/: infercnvpy_tutorial.ipynb  swiftcnv_tutorial.ipynb
src/swiftcnv/: __init__.py  __main__.py  cli.py  core.py  hmm.py  utils.py
src/swiftcnv/data/: __init__.py  chr_arms.tsv
